feat: pokemons com seus devidos atributos

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       <h1>Pokedex</h1>
 
       <ol id="pokemonsList" class="pokemons">
-        <li class="pokemon">
-          <!-- Onde os pokemons vão aparecer -->
+        <!-- Onde os pokemons vão aparecer -->
+        
+        <!-- <li class="pokemon">
           <span class="number">#001</span>
           <span class="name">Bulbasaur</span>
 
@@ -49,7 +50,7 @@
               alt="Bulbasaur"
             />
           </div>
-        </li>
+        </li> -->
       </ol>
     </section>
 
