--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       </ol>
     </section>
 
+    <div class="pagination">
+      <button id="loadMoreButton" type="button">Load more</button>
+    </div>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
